--- a/debug/Makefile.am
+++ b/debug/Makefile.am
@@ -20,7 +20,7 @@ vpath %.cu $(SRC_DIR)
 .cu.o:
 	$(NVCC) -o $*.o -c $(SRC_DIR)/$*.cu
 
-complex_SRCS = NBAR.C dimer.C crowder.C syt.C ifitm3.C dynamin.C
+complex_SRCS = NBAR.C dimer.C crowder.C syt.C ifitm3.C dynamin.C CNT.C
 util_SRCS    = mutil.C util.C
 amoeba_SRCS  = amoeba_code/amotry.C amoeba_code/amoeba.C amoeba_code/nrutil.C 
 
